# snippets_menu_magic

./: .directory  .gitignore  AUTHORS.md  GUIDE.ipynb  GUIDE.md  MANIFEST.in  README.md  pyproject.toml
snippets_menu_magic/: __init__.py  magic.json  nb_register.py  snippets.py
